allow for Java 21